--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://helo.land/</title>
-<meta http-equiv="refresh" content="0; URL=https://helo.land/">
-<link rel="canonical" href="https://helo.land/">
+<title>Redirecting to https://bodrumgirisimcilik.github.io/menu.pdf</title>
+<meta http-equiv="refresh" content="0; URL=https://bodrumgirisimcilik.github.io/menu.pdf">
+<link rel="canonical" href="https://bodrumgirisimcilik.github.io/menu.pdf">
 
