--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://bodrumgirisimcilik.github.io/menu.pdf</title>
-<meta http-equiv="refresh" content="0; URL=https://bodrumgirisimcilik.github.io/menu.pdf">
-<link rel="canonical" href="https://bodrumgirisimcilik.github.io/menu.pdf">
--->
-
-<embed src="menu.pdf" width="800px" height="2100px" />
+<title>Redirecting to https://bodrumgirisimcilik.bubbleapps.io/static_menu</title>
+<meta http-equiv="refresh" content="0; URL=https://bodrumgirisimcilik.bubbleapps.io/static_menu">
+<link rel="canonical" href="https://bodrumgirisimcilik.bubbleapps.io/static_menu">
