--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://bodrumgirisimcilik.bubbleapps.io/static_menu</title>
-<meta http-equiv="refresh" content="0; URL=https://bodrumgirisimcilik.bubbleapps.io/static_menu">
-<link rel="canonical" href="https://bodrumgirisimcilik.bubbleapps.io/static_menu">
+<title>Redirecting to https://helo.land/community-application-questions/</title>
+<meta http-equiv="refresh" content="0; URL=https://helo.land/community-application-questions/">
+<link rel="canonical" href="https://helo.land/community-application-questions/">
